feat: 将续期费用和续期时长提取为可配置项
- 添加续期配置项 (renewCost, renewDays) 支持在管理后台设置
- Server.php: 从数据库读取续期配置，支持动态更新
- server.php: 添加 getRenewConfig() 函数支持热更新配置
- setting.html: 在系统设置页面添加续期费用和时长配置UI
- account.html: 使用动态配置显示续期价格
- example.env: 添加 RENEW_COST 和 RENEW_DAYS 配置项

配置优先级: 数据库 > .env > 默认值

--- a/app/media/view/server/account.html
+++ b/app/media/view/server/account.html
@@ -168,7 +168,7 @@
             }
             ?>
         </p>
-        <p>续期价格：10 RCoin/30天</p>
+        <p>续期价格：{$renewCost} RCoin/{$renewDays}天</p>
         <p>续期方式：余额续期、兑换码续期、充值续期</p>
         <p>续期说明：余额续期即使用账户余额续期，兑换码续期即使用兑换码续期，充值续期即使用充值续期</p>
         <p>续期规则：续期后有效期自动延长，续期后有效期不可退款</p>
